--- a/plc4x/throwing-the-towel.adoc
+++ b/plc4x/throwing-the-towel.adoc
@@ -46,25 +46,26 @@ For any part of the project were always multiple people able and willing to take
 However, when Covid hit us, many of the contributors grew more and more dormant.
 Some had to fight to keep the lights on in their own businesses and simply didn't have any more time or energy to spare, others simply changed jobs to positions that no longer required PLC4X.
 Due to budget cuts, I could no longer continue to work on PLC4X as part of my job at codecentric.
-Getting new folks on board during that time was super challenging during this time.
+Getting new folks on board during that time was also super challenging.
 
-Right now I would count 4-5 of the core team still actively working on parts of the project.
-However, it seems we have lost everyone else who was working on the house-keeping of the project.
+Right now I would count 4-5 of the core team still actively working on various parts of the project.
+However, it seems we have lost everyone besides me, who was working on the house-keeping of the project.
 
 An open source project is more than implementing features.
 Bill Doerrfeld writes in his recently published blog-post (https://thenewstack.io/open-source-is-at-a-crossroads/): "People also don’t often realize that community management for open source projects is a full-time job"
 
-There usually is a lot of work in cleaning up, refactoring, streamlining, optimizing, testing, documenting, writing reports and probably the most important thing: mentoring and encouraging others to become part of the team.
-This I see as the probably most important job of them all.
+There usually is a lot of work in cleaning up, refactoring, streamlining, optimizing, testing, documenting, writing reports and mentoring and encouraging others to become part of the team.
+I see mentoring as the probably most important job of them all.
 Unfortunately also the one that requires the largest investment in time.
 
 After announcing that I would stop providing free commercial support for PLC4X in 2022, I focussed on encouraging people to scratch their own itches.
 Obviously, this took even more time than simply fixing things myself.
 But I still didn't grow tired of trying to encourage people to start working on PLC4X themselves by promising to be there to help, if they need any help and by even providing them with the steps needed to do so.
+My hope was, once they got more confident with scratching their own itches, they would not only do the work for these, but also start working on other people's itches as well, as this is the typical way people grow into open-source.
 
 Needless to say, not much came out of this ... usually people disappeared as fast as they'd shown up.
-
-Some even closed their issues with snarky: "giving up on this lib using lib X now" comments.
+Some even closed their issues with snarky comments such as: "giving up on this lib using lib X now".
+Probably `lib X` is also full of similar comments in their bug and issue tracker ;-)
 
 But still there were enough issues remaining to cause quite a wall of issues forming, one I recently decided to squash, fixing more than half of the open issues within 2-3 weeks.
 
@@ -75,7 +76,7 @@ This was all work that I have been continuing to do mostly in my free time.
 As I mentioned before, I left codecentric in 2020, since I was no longer allowed to work on PLC4X in my work time due to covid-related budget cuts.
 I decided to stick with PLC4X and looked for a position where I could continue to work on it.
 
-During my time at Mapped, I was able to invest a lot of time into PLC4X, especially the `Go` implementation `PLC4Go`, however the house-keeping was to be done in my free time.
+During my time at Mapped, I was able to invest a lot of time into PLC4X, especially the `Go` implementation: `PLC4Go`, however the house-keeping was to be done in my free time.
 
 Despite the completely different promises made by the company I worked for after that, I had to do everything in my free time.
 At least here, I learned the hard way, that I should never blindly trust someone wanting to hire me.
@@ -182,6 +183,7 @@ image::commit-activity.jpg[]
 == The Future of Apache PLC4X
 
 Things will probably change.
+
 Perhaps me stepping back gives room for people that might have been kept from participating due to my over-proportional involvement.
 After all, when the bases are covered by someone, and you only had to wait for a fix, why bother investigating yourself?
 If that's the case, then things will normalize again.
@@ -201,7 +203,7 @@ Even if I have completely lost my faith in open-source in the OT-industry, I sti
 
 There's something big lurking around the corner, that will become an issue soon and which could speed up things.
 
-Once in Europe the CRA and PLD initiatives are becoming binding legal frameworks and probably also similar initiatives elsewhere, I expect the `house-keeping` in projects such as Apache PLC4X to skyrocket.
+Once in Europe the CRA (Cyber-Resilliency-Act) and PLD (Product Libability Directive) initiatives are becoming binding legal frameworks and probably also similar initiatives elsewhere, I expect the `house-keeping` in projects such as Apache PLC4X to skyrocket.
 A very long list of rules will apply to how software is to be created and maintained and this list doesn't really make a difference between commercial offerings and open-source projects.
 As soon as a `product with digital elements` (Which software is generally referred to here) is to be `put on the market` (releasing the software), the entity releasing the software is responsible to complying with these rules.
 
@@ -222,12 +224,12 @@ Luckily at the ASF we already have a pretty strict set of policies when it comes
 
 Open-source projects not located at an open-source steward, especially ones without commercial backing will most probably simply stop existing or might start prohibiting the usage of their software in affected countries.
 
-Unfortunately, there will be one group of software, that will most probably still have to comply with a lot more rules, even if they are hosted at an open-source seward: Projects that are considered `critical infratstuctue`.
+Unfortunately, there will be one group of software, that will most probably still have to comply with a much larger set of rules, even if they are hosted at an open-source seward: Projects that are considered `critical infratstuctue`.
 I was told that Apache PLC4X will most probably be considered as such. Releasing critical infrastructure products, will most definitely require checks such as external code audits etc. (which don't come for free).
 
 This also brings me back to the topic of this blog post: That PLC4X needs more support by the companies using it.
 
-Without a significant increase in workforce and en even more significant increase in funding, I am pretty sure that nobody currently working on the PLC4X project is willing to continue.
+Without a significant increase in workforce and en even more significant increase in funding, I am pretty sure that nobody currently working on the PLC4X project is willing to continue once CRA and PLD are in place and their rules become requirements.
 
 Money would definitely be well invested in supporting open-source projects in general, especially those projects that don't have any form of commercial backing. Without significant invests projects such as PLC4X will most probably simply stop existing.
 
@@ -235,10 +237,10 @@ Apache PLC4X is, as far as I know, the only open source project for communicatio
 To my knowledge, the only other project in this sector is the Eclipse Milo project.
 However, this project only deals with communication in one single protocol (OPC-UA).
 
-Having a look at most other open-source projects in this sector, most are run by individuals in their free time.
+Having a look at other open-source projects in this sector, most are run by individuals in their free time.
 I see no chance of being able to continue using these in a CRA and PLD regulated world.
 
-Generally: Companies relying on open-source should consider funding both the projects and the foundations of whom they plan consuming open-source products from now and in the future, or they will have to do all the work themselves. This will come at costs that are a lot higher than simply supporting existing projects now. However, this has to happen now and not once it's too late. Once they have given up, that's too late.
+Generally: Companies relying on open-source should consider funding both the projects as well as the foundations of whom they plan consuming open-source products from now and in the future, or they will have to do all the work themselves. This will come at costs that are a lot higher than simply supporting existing projects now. However, this has to happen now and not once it's too late. Once they have given up, that's too late.
 
 I know the ASF is already preparing itself and it's projects, and this comes with quite some costs for the foundation.
 Costs that cause the ASF to spend more money than it currently is raising by sponsorships.
